--- a/.github/workflows/build-yt6801-deb.yml
+++ b/.github/workflows/build-yt6801-deb.yml
@@ -1,96 +1,55 @@
-name: Build yt6801 .deb (Proxmox 9 / trixie)
+name: build yt6801 .deb
 
 on:
   workflow_dispatch:
-    inputs:
-      kernel_version:
-        description: "Proxmox kernel version (e.g. 6.14.8-2-pve)"
-        required: true
-        default: "6.14.8-2-pve"
+  push:
+    branches: [ "main", "master" ]
+  workflow_call: {}
 
 jobs:
-  build:
+  build-deb:
     runs-on: ubuntu-latest
-    container:
-      image: debian:trixie
-
     env:
-      DEBIAN_FRONTEND: noninteractive
-
+      DEB_PACKAGE_NAME: yt6801-driver
+      KERNEL_VERSIONS: "6.14.8-2-pve 6.14.11-4-pve 6.12.43+deb13-amd64"
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Set KVER
-        run: echo "KVER=${{ github.event.inputs.kernel_version }}" >> $GITHUB_ENV
+    - name: Install build deps
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential dkms debhelper dh-make fakeroot git
 
-      - name: Base tools + Proxmox APT key & repo
-        run: |
-          set -eux
-          apt-get update
-          apt-get install -y --no-install-recommends \
-            ca-certificates curl gnupg lsb-release \
-            build-essential make git kmod bc xz-utils dpkg-dev fakeroot
+    # VOLITELNÉ: pokud máš konkrétní proxmox header package URL, můžeš ho sem stáhnout.
+    # Nechávám volné, aby stroj zkusil dostupné linux-headers; pokud to selže, bude potřeba
+    # nahrát headers do repozitáře nebo přidat dalších krok pro stažení proxmox headers.
 
-          install -d -m 0755 /etc/apt/keyrings
-          curl -fsSL https://enterprise.proxmox.com/debian/proxmox-release-trixie.gpg \
-            | gpg --dearmor > /etc/apt/keyrings/proxmox-release.gpg
+    - name: Prepare deb structure
+      run: |
+        mkdir -p package/usr/src/yt6801
+        cp -r ./* package/usr/src/yt6801
+        pushd package
+        mkdir -p DEBIAN
+        cat > DEBIAN/control <<'EOF'
+Package: ${DEB_PACKAGE_NAME}
+Version: 1.0
+Section: kernel
+Priority: optional
+Architecture: amd64
+Maintainer: You <you@example.com>
+Description: yt6801 kernel driver (source packaged). Build and install module for target kernel.
+EOF
+        popd
 
-          echo "deb [signed-by=/etc/apt/keyrings/proxmox-release.gpg] http://download.proxmox.com/debian/pve trixie pve-no-subscription" \
-            > /etc/apt/sources.list.d/proxmox-trixie.list
+    - name: Build .deb (source-only; module build done on target)
+      run: |
+        dpkg-deb --build package
+        mv package.deb yt6801-source-package.deb || true
+        ls -lh
 
-          apt-get update
-
-      - name: Install Proxmox headers for ${KVER}
-        run: |
-          set -eux
-          apt-get install -y --no-install-recommends "proxmox-headers-${KVER}"
-          ls -ld "/usr/src/linux-headers-${KVER}"
-
-      - name: Build yt6801.ko against ${KVER}
-        working-directory: ./src
-        run: |
-          set -eux
-          make -C "/usr/src/linux-headers-${KVER}" M="$PWD" clean modules
-          ls -lh yt6801.ko
-
-      - name: Package DEB
-        working-directory: .
-        run: |
-          set -eux
-          PKGDIR=pkg
-          install -d "${PKGDIR}/DEBIAN" "${PKGDIR}/lib/modules/${KVER}/updates"
-          install -m 0644 "src/yt6801.ko" "${PKGDIR}/lib/modules/${KVER}/updates/yt6801.ko"
-
-          cat > "${PKGDIR}/DEBIAN/control" <<EOF
-          Package: yt6801-driver
-          Version: ${KVER}
-          Section: kernel
-          Priority: optional
-          Architecture: amd64
-          Maintainer: ${GITHUB_REPOSITORY}
-          Description: YT6801 Ethernet driver module for Proxmox kernel ${KVER}
-          Depends:
-          EOF
-
-          cat > "${PKGDIR}/DEBIAN/postinst" <<'EOF'
-          #!/bin/sh
-          set -e
-          # Zapiš modul pro autoload
-          grep -qxF yt6801 /etc/modules 2>/dev/null || echo yt6801 >> /etc/modules
-          # Přegeneruj moduly (pro běžící i cílové KVER, pokud je k dispozici)
-          depmod -a || true
-          for k in /lib/modules/*-pve; do depmod -a "$(basename "$k")" || true; done
-          exit 0
-          EOF
-          chmod 0755 "${PKGDIR}/DEBIAN/postinst"
-
-          dpkg-deb --build "${PKGDIR}" "yt6801-driver_${KVER}.deb"
-          ls -lh "yt6801-driver_${KVER}.deb"
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: yt6801-driver_${{ env.KVER }}
-          path: yt6801-driver_${{ env.KVER }}.deb
-          if-no-files-found: error
+    - name: Upload artifact (.deb)
+      uses: actions/upload-artifact@v4
+      with:
+        name: yt6801-source-deb
+        path: yt6801-source-package.deb
