--- a/.github/workflows/build-yt6801-deb.yml
+++ b/.github/workflows/build-yt6801-deb.yml
@@ -1,43 +1,42 @@
-name: build yt6801 .deb
+name: build-yt6801-deb
 
 on:
   workflow_dispatch:
   push:
-    branches: ["main", "master"]
+    branches:
+      - main
+      - master
 
 jobs:
-  build-deb:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install build deps
+      - name: Install build tools
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential debhelper fakeroot rsync
 
-      - name: Prepare deb structure
+      - name: Prepare debian package structure
         run: |
-          set -e
+          set -euo pipefail
           mkdir -p pkg/usr/src/yt6801
           rsync -a --exclude ".git" --exclude ".github" ./ pkg/usr/src/yt6801/
           mkdir -p pkg/DEBIAN
-          cat > pkg/DEBIAN/control <<'EOF'
-Package: yt6801-source
-Version: 1.0
-Section: kernel
-Priority: optional
-Architecture: amd64
-Maintainer: Your Name <you@example.com>
-Description: YT6801 Ethernet driver (source only). Build the kernel module on the target with matching headers.
-EOF
+          printf "%s\n" \
+            "Package: yt6801-source" \
+            "Version: 1.0" \
+            "Section: kernel" \
+            "Priority: optional" \
+            "Architecture: amd64" \
+            "Maintainer: Your Name <you@example.com>" \
+            "Description: YT6801 Ethernet driver (source only). Build the kernel module on the target with matching headers." \
+            > pkg/DEBIAN/control
 
       - name: Build .deb
-        run: |
-          dpkg-deb --build pkg yt6801-source.deb
-          ls -lh yt6801-source.deb
+        run: dpkg-deb --build pkg yt6801-source.deb
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
