--- a/.github/workflows/build-yt6801-deb.yml
+++ b/.github/workflows/build-yt6801-deb.yml
@@ -5,29 +5,44 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+
     steps:
-      - name: Checkout repo
+      - name: Checkout source (yt6801 driver repo)
         uses: actions/checkout@v4
 
-      - name: Install build dependencies
+      - name: Install build toolchain (Ubuntu, no extra repos)
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential git dkms curl
+          sudo apt-get install -y build-essential git dkms ca-certificates curl
 
-      - name: Install Proxmox headers (6.14.8-2-pve)
+      - name: Download Proxmox headers 6.14.8-2-pve (.deb)
         run: |
-          curl -O http://download.proxmox.com/debian/pve/dists/trixie/pve-no-subscription/binary-amd64/pve-headers-6.14.8-2-pve_6.14.8-2_amd64.deb
-          sudo apt install -y ./pve-headers-6.14.8-2-pve_6.14.8-2_amd64.deb
+          set -euxo pipefail
+          KVER="6.14.8-2-pve"
+          HDR_DEB="pve-headers-${KVER}_6.14.8-2_amd64.deb"
+          # Přímý download bez přidávání repozitářů:
+          curl -fLO "http://download.proxmox.com/debian/pve/pool/pve-kernel/${HDR_DEB}"
+          sudo dpkg -i "${HDR_DEB}" || true
+          # Doinstaluj případné chybějící závislosti z Ubuntu (bez Debian/Proxmox rep):
+          sudo apt-get -y -f install
+          # Vytvoř /lib/modules/<KVER>/build → headers
+          sudo mkdir -p "/lib/modules/${KVER}"
+          if [ ! -e "/lib/modules/${KVER}/build" ]; then
+            sudo ln -s "/usr/src/linux-headers-${KVER}" "/lib/modules/${KVER}/build"
+          fi
+          ls -l "/lib/modules/${KVER}/build"
 
-      - name: Build yt6801 kernel module
+      - name: Build yt6801.ko against 6.14.8-2-pve headers
         run: |
+          set -euxo pipefail
+          KVER="6.14.8-2-pve"
           cd src || cd .
-          make -C /lib/modules/6.14.8-2-pve/build M="$PWD" modules
+          make -C "/lib/modules/${KVER}/build" M="$PWD" clean modules
           mkdir -p build-output
-          find . -name "yt6801.ko" -exec cp {} build-output/ \;
+          cp -v yt6801.ko build-output/
 
-      - name: Upload built module
+      - name: Upload artifact (yt6801.ko)
         uses: actions/upload-artifact@v4
         with:
-          name: yt6801-ko
+          name: yt6801-ko-6.14.8-2-pve
           path: build-output/yt6801.ko
